@@ -39,22 +39,61 @@
      <property name="sizeHint" stdset="0">
       <size>
        <width>20</width>
-       <height>24</height>
+       <height>6</height>
       </size>
      </property>
     </spacer>
    </item>
    <item>
-    <widget class="QCheckBox" name="prepare_minimal_install">
+    <widget class="QLabel" name="qt_minimum_install_header">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Which applications would you like to start with?</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QRadioButton" name="prepare_normal_install">
+     <property name="text">
+      <string>Normal installation</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="qt_label_normal_install">
+     <property name="text">
+      <string>Web browser, utilities, office software, KDE PIM suite plus additional internet applications and media players.</string>
+     </property>
+     <property name="indent">
+      <number>24</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QRadioButton" name="prepare_minimal_install">
      <property name="text">
       <string>Minimal installation</string>
      </property>
     </widget>
    </item>
    <item>
-    <widget class="QLabel" name="label_minimal_install">
+    <widget class="QLabel" name="qt_label_minimal_install">
      <property name="text">
-      <string>This will only install a minimal desktop environment with a browser and utilities.</string>
+      <string>Web browser plus basic utilities and applications.</string>
+     </property>
+     <property name="indent">
+      <number>24</number>
      </property>
     </widget>
    </item>
@@ -73,6 +112,22 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item>
+    <widget class="QLabel" name="install_other_options_header">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Other options</string>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QCheckBox" name="prepare_download_updates">
