@@ -20,6 +20,8 @@ ubiquity (18.04.4) UNRELEASED; urgency=medium
   * Update "Updates and Other Software" page to match the spec (LP: #1758082)
 
   [ Rik Mills ]
+  * Update KDE/Qt "Updates and Other Software" page in line with GTK changes,
+    with some tweaks appropriate for Kubuntu usage in Bionic
   * Mark the sddm.conf file for OEM so that it can be removed by oem-config
     if unchanged.
 
